unpackaged/objects/FMV_Exception_request__c.object
<CustomObject>
  <description>Used to track approvals for exceptions to Fair Market Value (FMV) payments. Used for Clinical Affairs Only.</description>
  <fields>
    <fullName>Bona_fide_work_description__c</fullName>
    <description>What is the bona fide work need associated with this request?</description>
    <inlineHelpText>What is the bona fide work need associated with this request?</inlineHelpText>
    <label>Bona fide work description</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Exception_End_Date__c</fullName>
    <description>States the date when the exception is ending.</description>
    <inlineHelpText>Add to which date the exception should be valid.</inlineHelpText>
    <label>Exception End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Exception_Rationale__c</fullName>
    <inlineHelpText>Add the reason/rationale for the exception</inlineHelpText>
    <label>Exception Rationale</label>
    <length>32768</length>
    <type>Html</type>
  </fields>
  <fields>
    <fullName>Exception_Start_Date__c</fullName>
    <description>Used to track the start of the exception period</description>
    <inlineHelpText>Add the date from when the exception should be valid.</inlineHelpText>
    <label>Exception Start Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Exception_Type__c</fullName>
    <description>Defines if the exception is intended to allow a higher rate or a lower rate than defined in the FMV model.</description>
    <formula>IF(Requested_Rate__c&gt;Max_rate__c, "Higher", IF(Requested_Rate__c&lt;Min_rate__c, "Lower", "Error"))</formula>
    <label>Exception Type</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>KOL_information__c</fullName>
    <label>KOL information</label>
    <referenceTo>Expert__c</referenceTo>
    <relationshipLabel>FMV Exception requests</relationshipLabel>
    <relationshipName>FMV_Exception_requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
  </fields>
  <fields>
    <fullName>Max_rate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Maximum allowed hourly rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Min_rate__c</fullName>
    <description>Checks the minimum allwoed rate according to FMV - brought in from FMV model thorugh the FMV exception flow.</description>
    <label>Minimum allowed hourly rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Requested_Rate__c</fullName>
    <inlineHelpText>Add KOL's requested rate.</inlineHelpText>
    <label>Requested Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Draft</fullName>
          <default>true</default>
          <label>Draft</label>
        </value>
        <value>
          <fullName>Submitted for Approval</fullName>
        </value>
        <value>
          <fullName>Approved</fullName>
        </value>
        <value>
          <fullName>Rejected</fullName>
        </value>
        <value>
          <fullName>Expired</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Uniquely_qualified__c</fullName>
    <description>Is this KOL uniquely qualified to perform the work?</description>
    <inlineHelpText>Is this KOL uniquely qualified to perform the work?</inlineHelpText>
    <label>Uniquely qualified?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Uniquely_qualified_reason__c</fullName>
    <label>Uniquely qualified reason</label>
    <type>TextArea</type>
  </fields>
  <label>FMV Exception request</label>
  <nameField>
    <displayFormat>exc-{00000}</displayFormat>
    <label>FMV Exception request Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>FMV Exception requests</pluralLabel>
  <sharingModel>ControlledByParent</sharingModel>
  <validationRules>
    <fullName>ExceptionEndDateMustBeChangedByApprover</fullName>
    <active>true</active>
    <description>Exception End Date on the FMV Exception request can be initially filled. After initial filling, it should be read-only to all users. It can only be changed by the approver (Vicki Gaines).
TFUS-000003534</description>
    <errorConditionFormula>AND(
$Setup.GlobalBypassProcessesSettings__c.RunValidationRules__c,
NOT(ISNEW()),
ISChanged(Exception_End_Date__c),
$User.Id &lt;&gt; '0050J000007YnWH'
)</errorConditionFormula>
    <errorDisplayField>Exception_End_Date__c</errorDisplayField>
    <errorMessage>You're not allowed to modify the Exception End Date. Please, contact Vicki Gaines.</errorMessage>
  </validationRules>
</CustomObject>